refactor: 세션 피드백 입력 모델 타입화
Co-Authored-By: OpenAI Codex <noreply@openai.com>